# football_trackingdata_analysis

./: .gitignore  README.md  pyproject.toml
notebook/: main.ipynb  visualize.ipynb
